# ParallelNTT

./: .gitignore  CMakeLists.txt  GPU-NTT.vcxproj  NTT.cu  NTT.hpp  README.md  cuda_uint128.h  cuda_util.cuh  eval.py  eval_1.py  main.cu  time_util.h
src/: NTT.cu  NTT.hpp  config.hpp  cuda_util.cuh  main.cu  math_util.hpp  py_util.hpp  time_util.hpp
vs/: GPU-NTT.sln  README.md  cuda_uint128.h  main.cu
